--- a/src/css/bulma.css
+++ b/src/css/bulma.css
@@ -1,9 +1,49 @@
 /*! bulma.io v0.9.0 | MIT License | github.com/jgthms/bulma */
+.subtitle:not(:last-child),
+.title:not(:last-child) {
+    margin-bottom: 1.5rem
+}
+
+.button {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    align-items: center;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    box-shadow: none;
+    display: inline-flex;
+    font-size: 1rem;
+    height: 2.5em;
+    justify-content: flex-start;
+    line-height: 1.5;
+    padding-bottom: calc(.5em - 1px);
+    padding-left: calc(.75em - 1px);
+    padding-right: calc(.75em - 1px);
+    padding-top: calc(.5em - 1px);
+    position: relative;
+    vertical-align: top
+}
+
+.button:active,
+.button:focus {
+    outline: 0
+}
+
+.button[disabled] {
+    cursor: not-allowed
+}
+
 /*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
 body,
 h1,
-h2
-html {
+h2,
+html,
+li {
     margin: 0;
     padding: 0
 }
@@ -12,6 +52,10 @@ h1,
 h2 {
     font-size: 100%;
     font-weight: 400
+}
+
+button {
+    margin: 0
 }
 
 *,
@@ -41,8 +85,16 @@ html {
     text-size-adjust: 100%
 }
 
+section {
+    display: block
+}
+
+body,
+button {
+    font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
+}
+
 body {
-    font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #4a4a4a;
     font-size: 1em;
     font-weight: 400;
@@ -59,55 +111,75 @@ a:hover {
     color: #363636
 }
 
-.container {
-    flex-grow: 1;
-    flex-shrink: 1;
-    margin: 0 auto;
-    position: relative;
-    width: auto;
+.button {
+    background-color: #fff;
+    border-color: #dbdbdb;
+    border-width: 1px;
+    color: #363636;
+    cursor: pointer;
+    justify-content: center;
+    padding-bottom: calc(.5em - 1px);
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-top: calc(.5em - 1px);
+    text-align: center;
+    white-space: nowrap
 }
 
-@media screen and (max-width:1023px) {
-    .navbar-brand .navbar-item {
-        align-items: center;
-        display: flex
-    }
+.button:hover {
+    border-color: #b5b5b5;
+    color: #363636
+}
 
-    .navbar-menu {
-        background-color: #fff;
-        box-shadow: 0 8px 16px rgba(10, 10, 10, .1);
-        padding: .5rem 0
-    }
+.button:focus {
+    border-color: #3273dc;
+    color: #363636
+}
+
+.button:focus:not(:active) {
+    box-shadow: 0 0 0 .125em rgba(50, 115, 220, .25)
+}
+
+.button:active {
+    border-color: #4a4a4a;
+    color: #363636
+}
+
+.button.is-info {
+    background-color: #3298dc;
+    border-color: transparent;
+    color: #fff
+}
+
+.button.is-info:hover {
+    background-color: #2793da;
+    border-color: transparent;
+    color: #fff
+}
+
+.button.is-info:focus {
+    border-color: transparent;
+    color: #fff
+}
+
+.button.is-info:focus:not(:active) {
+    box-shadow: 0 0 0 .125em rgba(50, 152, 220, .25)
+}
+
+.button.is-info:active {
+    background-color: #238cd1;
+    border-color: transparent;
+    color: #fff
+}
+
+.container {
+    flex-grow: 1;
+    margin: 0 auto;
+    position: relative;
+    width: auto
 }
 
 @media screen and (min-width:1024px) {
-
-    .navbar,
-    .navbar-menu,
-    .navbar-start {
-        align-items: stretch;
-        display: flex
-    }
-
-    .navbar {
-        min-height: 3.25rem
-    }
-
-    .navbar-item {
-        align-items: center;
-        display: flex
-    }
-
-    .navbar-menu {
-        flex-grow: 1;
-        flex-shrink: 0
-    }
-
-    .navbar-start {
-        justify-content: flex-start;
-        margin-right: auto
-    }
-
     .container {
         max-width: 960px
     }
@@ -125,12 +197,20 @@ a:hover {
     }
 }
 
+.subtitle,
 .title {
-    word-break: break-word;
+    word-break: break-word
+}
+
+.title {
     color: #363636;
     font-size: 2rem;
     font-weight: 600;
     line-height: 1.125
+}
+
+.title:not(.is-spaced)+.subtitle {
+    margin-top: -1.25rem
 }
 
 .subtitle {
@@ -138,6 +218,10 @@ a:hover {
     font-size: 1.25rem;
     font-weight: 400;
     line-height: 1.25
+}
+
+.subtitle:not(.is-spaced)+.title {
+    margin-top: -1.25rem
 }
 
 .navbar {
@@ -184,6 +268,67 @@ a.navbar-item:hover {
     color: #3273dc
 }
 
+@media screen and (max-width:1023px) {
+    .navbar>.container {
+        display: block
+    }
+
+    .navbar-brand .navbar-item {
+        align-items: center;
+        display: flex
+    }
+
+    .navbar-link::after {
+        display: none
+    }
+
+    .navbar-menu {
+        background-color: #fff;
+        box-shadow: 0 8px 16px rgba(10, 10, 10, .1);
+        padding: .5rem 0
+    }
+}
+
+@media screen and (min-width:1024px) {
+
+    .navbar,
+    .navbar-menu,
+    .navbar-start {
+        align-items: stretch;
+        display: flex
+    }
+
+    .navbar {
+        min-height: 3.25rem
+    }
+
+    .navbar-item,
+    .navbar-link {
+        align-items: center;
+        display: flex
+    }
+
+    .navbar-menu {
+        flex-grow: 1;
+        flex-shrink: 0
+    }
+
+    .navbar-start {
+        justify-content: flex-start;
+        margin-right: auto
+    }
+
+    .container>.navbar .navbar-brand,
+    .navbar>.container .navbar-brand {
+        margin-left: -.75rem
+    }
+
+    .container>.navbar .navbar-menu,
+    .navbar>.container .navbar-menu {
+        margin-right: -.75rem
+    }
+}
+
 .hero.is-fullheight-with-navbar {
     min-height: calc(100vh - 3.25rem)
 }
@@ -200,6 +345,10 @@ a.navbar-item:hover {
     color: #fff
 }
 
+.hero.is-link a:not(.button):not(.dropdown-item):not(.tag):not(.pagination-link.is-current) {
+    color: inherit
+}
+
 .hero.is-link .title {
     color: #fff
 }
@@ -208,15 +357,48 @@ a.navbar-item:hover {
     color: rgba(255, 255, 255, .9)
 }
 
-.hero-body {
+.hero.is-link .subtitle a:not(.button) {
+    color: #fff
+}
+
+@media screen and (max-width:1023px) {
+    .hero.is-link .navbar-menu {
+        background-color: #3273dc
+    }
+}
+
+.hero.is-link .navbar-item,
+.hero.is-link .navbar-link {
+    color: rgba(255, 255, 255, .7)
+}
+
+.hero.is-link .navbar-link:hover,
+.hero.is-link a.navbar-item:hover {
+    background-color: #2366d1;
+    color: #fff
+}
+
+.hero.is-fullheight-with-navbar .hero-body {
     align-items: center;
-    display: flex;
+    display: flex
+}
+
+.hero.is-fullheight-with-navbar .hero-body>.container {
+    flex-grow: 1;
+    flex-shrink: 1
+}
+
+.hero-head {
+    flex-grow: 0;
+    flex-shrink: 0
+}
+
+.hero-body {
     flex-grow: 1;
     flex-shrink: 0;
     padding: 3rem 1.5rem
 }
 
 .section {
-    padding: 3rem 1.5rem;
-    display: block
+    padding: 3rem 1.5rem
 }
