--- a/src/css/bulma.css
+++ b/src/css/bulma.css
@@ -4,40 +4,6 @@
     margin-bottom: 1.5rem
 }
 
-.button {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    align-items: center;
-    border: 1px solid transparent;
-    border-radius: 4px;
-    box-shadow: none;
-    display: inline-flex;
-    font-size: 1rem;
-    height: 2.5em;
-    justify-content: flex-start;
-    line-height: 1.5;
-    padding-bottom: calc(.5em - 1px);
-    padding-left: calc(.75em - 1px);
-    padding-right: calc(.75em - 1px);
-    padding-top: calc(.5em - 1px);
-    position: relative;
-    vertical-align: top
-}
-
-.button:active,
-.button:focus {
-    outline: 0
-}
-
-.button[disabled] {
-    cursor: not-allowed
-}
-
 /*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
 body,
 h1,
@@ -54,20 +20,12 @@ h2 {
     font-weight: 400
 }
 
-button {
-    margin: 0
-}
-
 *,
 ::after,
 ::before {
     box-sizing: inherit
 }
 
-video {
-    height: auto;
-    max-width: 100%
-}
 
 html {
     box-sizing: border-box;
@@ -107,15 +65,12 @@ a {
     text-decoration: none
 }
 
-a:hover {
-    color: #363636
-}
-
-.button {
-    background-color: #fff;
-    border-color: #dbdbdb;
+button {
+    margin: 0;
+    background-color: #3298dc;
+    border-color: transparent;
+    color: #fff;
     border-width: 1px;
-    color: #363636;
     cursor: pointer;
     justify-content: center;
     padding-bottom: calc(.5em - 1px);
@@ -123,50 +78,48 @@ a:hover {
     padding-right: 1em;
     padding-top: calc(.5em - 1px);
     text-align: center;
-    white-space: nowrap
+    white-space: nowrap;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    align-items: center;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    box-shadow: none;
+    display: inline-flex;
+    font-size: 1rem;
+    height: 2.5em;
+    justify-content: flex-start;
+    line-height: 1.5;
+    position: relative;
+    vertical-align: top
 }
 
-.button:hover {
-    border-color: #b5b5b5;
-    color: #363636
-}
-
-.button:focus {
-    border-color: #3273dc;
-    color: #363636
-}
-
-.button:focus:not(:active) {
-    box-shadow: 0 0 0 .125em rgba(50, 115, 220, .25)
-}
-
-.button:active {
-    border-color: #4a4a4a;
-    color: #363636
-}
-
-.button.is-info {
-    background-color: #3298dc;
-    border-color: transparent;
-    color: #fff
-}
-
-.button.is-info:hover {
+button:hover {
     background-color: #2793da;
     border-color: transparent;
     color: #fff
 }
 
-.button.is-info:focus {
+button:focus {
     border-color: transparent;
     color: #fff
 }
 
-.button.is-info:focus:not(:active) {
+.button:active,
+.button:focus {
+    outline: 0
+}
+
+button:focus:not(:active) {
     box-shadow: 0 0 0 .125em rgba(50, 152, 220, .25)
 }
 
-.button.is-info:active {
+button:active {
     background-color: #238cd1;
     border-color: transparent;
     color: #fff
@@ -174,9 +127,10 @@ a:hover {
 
 .container {
     flex-grow: 1;
+    flex-shrink: 1;
     margin: 0 auto;
     position: relative;
-    width: auto
+    width: auto;
 }
 
 @media screen and (min-width:1024px) {
@@ -203,7 +157,7 @@ a:hover {
 }
 
 .title {
-    color: #363636;
+    color: #fff;
     font-size: 2rem;
     font-weight: 600;
     line-height: 1.125
@@ -214,7 +168,7 @@ a:hover {
 }
 
 .subtitle {
-    color: #4a4a4a;
+    color: rgba(255, 255, 255, .9);
     font-size: 1.25rem;
     font-weight: 400;
     line-height: 1.25
@@ -238,11 +192,6 @@ a:hover {
     min-height: 3.25rem
 }
 
-.navbar-brand a.navbar-item:focus,
-.navbar-brand a.navbar-item:hover {
-    background-color: transparent
-}
-
 .navbar-menu {
     display: none
 }
@@ -254,10 +203,7 @@ a:hover {
     display: block;
     line-height: 1.5;
     padding: .5rem .75rem;
-    position: relative
-}
-
-a.navbar-item {
+    position: relative;
     cursor: pointer
 }
 
@@ -265,21 +211,14 @@ a.navbar-item:focus,
 a.navbar-item:focus-within,
 a.navbar-item:hover {
     background-color: #fafafa;
-    color: #3273dc
+    color: #3273dc;
+    background-color: transparent
 }
 
 @media screen and (max-width:1023px) {
-    .navbar>.container {
-        display: block
-    }
-
     .navbar-brand .navbar-item {
         align-items: center;
         display: flex
-    }
-
-    .navbar-link::after {
-        display: none
     }
 
     .navbar-menu {
@@ -290,7 +229,6 @@ a.navbar-item:hover {
 }
 
 @media screen and (min-width:1024px) {
-
     .navbar,
     .navbar-menu,
     .navbar-start {
@@ -302,8 +240,7 @@ a.navbar-item:hover {
         min-height: 3.25rem
     }
 
-    .navbar-item,
-    .navbar-link {
+    .navbar-item {
         align-items: center;
         display: flex
     }
@@ -317,83 +254,25 @@ a.navbar-item:hover {
         justify-content: flex-start;
         margin-right: auto
     }
-
-    .container>.navbar .navbar-brand,
-    .navbar>.container .navbar-brand {
-        margin-left: -.75rem
-    }
-
-    .container>.navbar .navbar-menu,
-    .navbar>.container .navbar-menu {
-        margin-right: -.75rem
-    }
-}
-
-.hero.is-fullheight-with-navbar {
-    min-height: calc(100vh - 3.25rem)
 }
 
 .hero {
+    min-height: calc(100vh - 3.25rem);
     align-items: stretch;
     display: flex;
     flex-direction: column;
-    justify-content: space-between
-}
-
-.hero.is-link {
+    justify-content: space-between;
     background-color: #3273dc;
     color: #fff
 }
 
-.hero.is-link a:not(.button):not(.dropdown-item):not(.tag):not(.pagination-link.is-current) {
+.hero a:not(.button) {
     color: inherit
 }
 
-.hero.is-link .title {
-    color: #fff
-}
-
-.hero.is-link .subtitle {
-    color: rgba(255, 255, 255, .9)
-}
-
-.hero.is-link .subtitle a:not(.button) {
-    color: #fff
-}
-
-@media screen and (max-width:1023px) {
-    .hero.is-link .navbar-menu {
-        background-color: #3273dc
-    }
-}
-
-.hero.is-link .navbar-item,
-.hero.is-link .navbar-link {
-    color: rgba(255, 255, 255, .7)
-}
-
-.hero.is-link .navbar-link:hover,
-.hero.is-link a.navbar-item:hover {
-    background-color: #2366d1;
-    color: #fff
-}
-
-.hero.is-fullheight-with-navbar .hero-body {
-    align-items: center;
-    display: flex
-}
-
-.hero.is-fullheight-with-navbar .hero-body>.container {
-    flex-grow: 1;
-    flex-shrink: 1
-}
-
-.hero-head {
-    flex-grow: 0;
-    flex-shrink: 0
-}
-
 .hero-body {
+    align-items: center;
+    display: flex;
     flex-grow: 1;
     flex-shrink: 0;
     padding: 3rem 1.5rem
