--- a/src/css/bulma.css
+++ b/src/css/bulma.css
@@ -1,23 +1,93 @@
 /*! bulma.io v0.9.0 | MIT License | github.com/jgthms/bulma */
+.button {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none
+}
+
+.navbar-link:not(.is-arrowless)::after {
+    border: 3px solid transparent;
+    border-radius: 2px;
+    border-right: 0;
+    border-top: 0;
+    content: " ";
+    display: block;
+    height: .625em;
+    margin-top: -.4375em;
+    pointer-events: none;
+    position: absolute;
+    top: 50%;
+    transform: rotate(-45deg);
+    transform-origin: center;
+    width: .625em
+}
+
+.content:not(:last-child),
+.message:not(:last-child),
 .subtitle:not(:last-child),
 .title:not(:last-child) {
     margin-bottom: 1.5rem
+}
+
+.button {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    align-items: center;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    box-shadow: none;
+    display: inline-flex;
+    font-size: 1rem;
+    height: 2.5em;
+    justify-content: flex-start;
+    line-height: 1.5;
+    padding-bottom: calc(.5em - 1px);
+    padding-left: calc(.75em - 1px);
+    padding-right: calc(.75em - 1px);
+    padding-top: calc(.5em - 1px);
+    position: relative;
+    vertical-align: top
+}
+
+.button:active,
+.button:focus,
+.is-active.button {
+    outline: 0
 }
 
 /*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
 body,
 h1,
 h2,
+h3,
+h4,
+h5,
+h6,
 html,
-li {
+li,
+p {
     margin: 0;
     padding: 0
 }
 
 h1,
-h2 {
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-size: 100%;
     font-weight: 400
+}
+
+button {
+    margin: 0
+}
+
+html {
+    box-sizing: border-box
 }
 
 *,
@@ -26,9 +96,12 @@ h2 {
     box-sizing: inherit
 }
 
+video {
+    height: auto;
+    max-width: 100%
+}
 
 html {
-    box-sizing: border-box;
     background-color: #fff;
     font-size: 16px;
     -moz-osx-font-smoothing: grayscale;
@@ -65,12 +138,20 @@ a {
     text-decoration: none
 }
 
-button {
-    margin: 0;
-    background-color: #3298dc;
-    border-color: transparent;
-    color: #fff;
+a:hover {
+    color: #363636
+}
+
+span {
+    font-style: inherit;
+    font-weight: inherit
+}
+
+.button {
+    background-color: #fff;
+    border-color: #dbdbdb;
     border-width: 1px;
+    color: #363636;
     cursor: pointer;
     justify-content: center;
     padding-bottom: calc(.5em - 1px);
@@ -78,59 +159,68 @@ button {
     padding-right: 1em;
     padding-top: calc(.5em - 1px);
     text-align: center;
-    white-space: nowrap;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    align-items: center;
-    border: 1px solid transparent;
-    border-radius: 4px;
-    box-shadow: none;
-    display: inline-flex;
-    font-size: 1rem;
-    height: 2.5em;
-    justify-content: flex-start;
-    line-height: 1.5;
-    position: relative;
-    vertical-align: top
+    white-space: nowrap
 }
 
-button:hover {
+.button:hover {
+    border-color: #b5b5b5;
+    color: #363636
+}
+
+.button:focus {
+    border-color: #3273dc;
+    color: #363636
+}
+
+.button:focus:not(:active) {
+    box-shadow: 0 0 0 .125em rgba(50, 115, 220, .25)
+}
+
+.button.is-active,
+.button:active {
+    border-color: #4a4a4a;
+    color: #363636
+}
+
+.button.is-info {
+    background-color: #3298dc;
+    border-color: transparent;
+    color: #fff
+}
+
+.button.is-info:hover {
     background-color: #2793da;
     border-color: transparent;
     color: #fff
 }
 
-button:focus {
+.button.is-info:focus {
     border-color: transparent;
     color: #fff
 }
 
-.button:active,
-.button:focus {
-    outline: 0
-}
-
-button:focus:not(:active) {
+.button.is-info:focus:not(:active) {
     box-shadow: 0 0 0 .125em rgba(50, 152, 220, .25)
 }
 
-button:active {
+.button.is-info.is-active,
+.button.is-info:active {
     background-color: #238cd1;
     border-color: transparent;
     color: #fff
 }
 
+.button.is-info[disabled] {
+    background-color: #3298dc;
+    border-color: transparent;
+    box-shadow: none
+}
+
 .container {
     flex-grow: 1;
-    flex-shrink: 1;
     margin: 0 auto;
     position: relative;
-    width: auto;
+    width: auto
 }
 
 @media screen and (min-width:1024px) {
@@ -156,8 +246,13 @@ button:active {
     word-break: break-word
 }
 
+.subtitle span,
+.title span {
+    font-weight: inherit
+}
+
 .title {
-    color: #fff;
+    color: #363636;
     font-size: 2rem;
     font-weight: 600;
     line-height: 1.125
@@ -168,7 +263,7 @@ button:active {
 }
 
 .subtitle {
-    color: rgba(255, 255, 255, .9);
+    color: #4a4a4a;
     font-size: 1.25rem;
     font-weight: 400;
     line-height: 1.25
@@ -192,33 +287,135 @@ button:active {
     min-height: 3.25rem
 }
 
+.navbar-brand a.navbar-item:focus,
+.navbar-brand a.navbar-item:hover {
+    background-color: transparent
+}
+
+.navbar-burger {
+    color: #4a4a4a;
+    cursor: pointer;
+    display: block;
+    height: 3.25rem;
+    position: relative;
+    width: 3.25rem;
+    margin-left: auto
+}
+
+.navbar-burger span {
+    background-color: currentColor;
+    display: block;
+    height: 1px;
+    left: calc(50% - 8px);
+    position: absolute;
+    transform-origin: center;
+    transition-duration: 86ms;
+    transition-property: background-color, opacity, transform;
+    transition-timing-function: ease-out;
+    width: 16px
+}
+
+.navbar-burger span:nth-child(1) {
+    top: calc(50% - 6px)
+}
+
+.navbar-burger span:nth-child(2) {
+    top: calc(50% - 1px)
+}
+
+.navbar-burger span:nth-child(3) {
+    top: calc(50% + 4px)
+}
+
+.navbar-burger:hover {
+    background-color: rgba(0, 0, 0, .05)
+}
+
+.navbar-burger.is-active span:nth-child(1) {
+    transform: translateY(5px) rotate(45deg)
+}
+
+.navbar-burger.is-active span:nth-child(2) {
+    opacity: 0
+}
+
+.navbar-burger.is-active span:nth-child(3) {
+    transform: translateY(-5px) rotate(-45deg)
+}
+
 .navbar-menu {
     display: none
 }
 
-.navbar-item {
-    flex-grow: 0;
-    flex-shrink: 0;
+.navbar-item,
+.navbar-link {
     color: #4a4a4a;
     display: block;
     line-height: 1.5;
     padding: .5rem .75rem;
-    position: relative;
+    position: relative
+}
+
+.navbar-item .icon:only-child,
+.navbar-link .icon:only-child {
+    margin-left: -.25rem;
+    margin-right: -.25rem
+}
+
+.navbar-link,
+a.navbar-item {
     cursor: pointer
 }
 
+.navbar-link.is-active,
+.navbar-link:focus,
+.navbar-link:focus-within,
+.navbar-link:hover,
+a.navbar-item.is-active,
 a.navbar-item:focus,
 a.navbar-item:focus-within,
 a.navbar-item:hover {
     background-color: #fafafa;
-    color: #3273dc;
-    background-color: transparent
+    color: #3273dc
+}
+
+.navbar-item {
+    flex-grow: 0;
+    flex-shrink: 0
+}
+
+.navbar-item.is-expanded {
+    flex-grow: 1;
+    flex-shrink: 1
+}
+
+.navbar-content {
+    flex-grow: 1;
+    flex-shrink: 1
+}
+
+.navbar-link:not(.is-arrowless) {
+    padding-right: 2.5em
+}
+
+.navbar-link:not(.is-arrowless)::after {
+    border-color: #3273dc;
+    margin-top: -.375em;
+    right: 1.125em
 }
 
 @media screen and (max-width:1023px) {
+    .navbar>.container {
+        display: block
+    }
+
     .navbar-brand .navbar-item {
         align-items: center;
         display: flex
+    }
+
+    .navbar-link::after {
+        display: none
     }
 
     .navbar-menu {
@@ -226,9 +423,14 @@ a.navbar-item:hover {
         box-shadow: 0 8px 16px rgba(10, 10, 10, .1);
         padding: .5rem 0
     }
+
+    .navbar-menu.is-active {
+        display: block
+    }
 }
 
 @media screen and (min-width:1024px) {
+
     .navbar,
     .navbar-menu,
     .navbar-start {
@@ -240,7 +442,12 @@ a.navbar-item:hover {
         min-height: 3.25rem
     }
 
-    .navbar-item {
+    .navbar-burger {
+        display: none
+    }
+
+    .navbar-item,
+    .navbar-link {
         align-items: center;
         display: flex
     }
@@ -254,25 +461,114 @@ a.navbar-item:hover {
         justify-content: flex-start;
         margin-right: auto
     }
+
+    .container>.navbar .navbar-brand,
+    .navbar>.container .navbar-brand {
+        margin-left: -.75rem
+    }
+
+    .container>.navbar .navbar-menu,
+    .navbar>.container .navbar-menu {
+        margin-right: -.75rem
+    }
+
+    .navbar-link.is-active,
+    a.navbar-item.is-active {
+        color: #0a0a0a
+    }
+
+    .navbar-link.is-active:not(:focus):not(:hover),
+    a.navbar-item.is-active:not(:focus):not(:hover) {
+        background-color: transparent
+    }
+}
+
+.hero.is-fullheight-with-navbar {
+    min-height: calc(100vh - 3.25rem)
+}
+
+.is-hidden {
+    display: none !important
 }
 
 .hero {
-    min-height: calc(100vh - 3.25rem);
     align-items: stretch;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-between
+}
+
+.hero .navbar {
+    background: 0 0
+}
+
+.hero.is-link {
     background-color: #3273dc;
     color: #fff
 }
 
-.hero a:not(.button) {
+.hero.is-link a:not(.button):not(.dropdown-item):not(.tag):not(.pagination-link.is-current) {
     color: inherit
 }
 
-.hero-body {
+.hero.is-link .title {
+    color: #fff
+}
+
+.hero.is-link .subtitle {
+    color: rgba(255, 255, 255, .9)
+}
+
+.hero.is-link .subtitle a:not(.button) {
+    color: #fff
+}
+
+@media screen and (max-width:1023px) {
+    .hero.is-link .navbar-menu {
+        background-color: #3273dc
+    }
+}
+
+.hero.is-link .navbar-item,
+.hero.is-link .navbar-link {
+    color: rgba(255, 255, 255, .7)
+}
+
+.hero.is-link .navbar-link.is-active,
+.hero.is-link .navbar-link:hover,
+.hero.is-link a.navbar-item.is-active,
+.hero.is-link a.navbar-item:hover {
+    background-color: #2366d1;
+    color: #fff
+}
+
+.hero.is-info {
+    background-color: #3298dc;
+    color: #fff
+}
+
+.hero.is-info a:not(.button):not(.dropdown-item):not(.tag):not(.pagination-link.is-current) {
+    color: inherit
+}
+
+.hero.is-fullheight .hero-body,
+.hero.is-fullheight-with-navbar .hero-body {
     align-items: center;
-    display: flex;
+    display: flex
+}
+
+.hero.is-fullheight .hero-body>.container,
+.hero.is-fullheight-with-navbar .hero-body>.container {
+    flex-grow: 1;
+    flex-shrink: 1
+}
+
+.hero-head {
+    flex-grow: 0;
+    flex-shrink: 0
+}
+
+.hero-body {
     flex-grow: 1;
     flex-shrink: 0;
     padding: 3rem 1.5rem
